# CepGenEpIC

./: CMakeLists.txt  README.md
CepGenEpIC/: EventGenerator.h  NullEventGenerator.h  NullWriter.h  ParametersListParser.h  ProcessInterface.h  ScenarioParser.h  Writer.h
cards/: epic_ddvcs_cfg.py  epic_dvcs_cfg.py  epic_dvmp_cfg.py  epic_gam2_cfg.py  epic_tcs_cfg.py
cmake/: FindApfel++.cmake  FindElementaryUtils.cmake  FindNumA++.cmake
data/: logger.properties.in  partons.properties.in
src/: EpICProcess.cpp  EventGenerator.cpp  NullEventGenerator.cpp  NullWriter.cpp  ParametersListParser.cpp  ScenarioParser.cpp  Writer.cpp
